feat: add podcast page and audio trial functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="ico/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>今日热榜 - 汇聚全网热点，热门尽览无余</title>
+    <meta name="description" content="今日热榜提供各大热门网站的热榜聚合浏览，包括知乎、微博、B站、抖音、百度等，助你快速了解全网热点资讯。" />
+    <meta name="keywords" content="今日热榜,热榜,热搜,热门资讯,榜单,知乎热榜,微博热搜,哔哩哔哩热榜" />
+    <meta property="og:title" content="今日热榜 - 汇聚全网热点" />
+    <meta property="og:description" content="一站式浏览全网热点资讯，实时更新，热门尽览无余。" />
+    <meta property="og:image" content="/icon/favicon.png" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="app"></div>
